# beatrice

./: .gitignore  Cargo.toml  README.md  flake.nix  test.bt
.github/workflows/: rust.yml
compiler/: Cargo.toml  README.md
compiler/src/: cli_args.rs  lib.rs  main.rs  span.rs
compiler/src/ast/: expression.rs  function.rs  ident.rs  item.rs  mod.rs  statement.rs  ty.rs
compiler/src/check/: duplicate_function.rs  mod.rs
compiler/src/codegen/: declare_struct.rs  expr.rs  function.rs  generate.rs  local.rs  mod.rs  statement.rs  structure.rs  ty.rs  utils.rs
compiler/src/codegen/expr/: array_access.rs  binary_op.rs  cast.rs  create_array.rs  create_struct.rs  deref.rs  field_access.rs  function_call.rs  mod.rs  structure.rs
compiler/src/codegen/expr/intrinsic/: is_nullptr.rs  mod.rs
compiler/src/codegen/ident/: local.rs  mod.rs
compiler/src/codegen/statement/: if.rs  mod.rs  while.rs
compiler/src/import/: item_processing.rs  mod.rs
compiler/src/lexing/: mod.rs  token.rs  token_display.rs
compiler/src/parsing/: block.rs  diagnostic.rs  ident.rs  mod.rs  program.rs  ty.rs
compiler/src/parsing/expr/: addr_of.rs  array_access.rs  atom.rs  binary_op.rs  cast.rs  create_array.rs  create_struct.rs  deref.rs  field_access.rs  function_call.rs  invert.rs  mod.rs  primary.rs  structure.rs
compiler/src/parsing/expr/atom/: addr_of.rs  cast.rs  deref.rs  field_access.rs  function_call.rs  mod.rs
compiler/src/parsing/expr/postfix/: array_access.rs  mod.rs
compiler/src/parsing/item/: constant.rs  declare_struct.rs  extern_fn.rs  function.rs  import.rs  mod.rs  structure.rs  type_alias.rs
compiler/src/parsing/statement/: assign.rs  expr.rs  if.rs  let.rs  mod.rs  return.rs  var.rs  while.rs
compiler/src/parsing/ty/: array.rs  atom.rs  mod.rs  ptr.rs
compiler/tests/: compile.rs
compiler/tests/compile/: array_access.rs  basics.rs  control_flow.rs  functions.rs  imports.rs  mod.rs  pointers.rs  structs.rs
kawaii/: Cargo.toml  README.md
kawaii/src/: args.rs  main.rs  new.rs  project_info.rs  project_layout.rs  run.rs  test_utils.rs
kawaii/tests/: build.rs  run.rs
src/: cli_args.rs  diagnostic.rs  main.rs  span.rs  state.rs
src/ast/: expresion.rs  expression.rs  function.rs  ident.rs  mod.rs  statement.rs
src/check/: duplicate_function.rs  mod.rs
src/codegen/: emit_obj.rs  expr.rs  function.rs  mod.rs  statement.rs  ty.rs
src/import/: item_processing.rs  mod.rs  visit_check.rs
src/lexing/: mod.rs  token.rs  token_display.rs
src/parsing/: block.rs  diagnostic.rs  expr.rs  function.rs  ident.rs  mod.rs  program.rs  statement.rs  ty.rs
src/parsing/expr/: base.rs  binary_op.rs  function_call.rs  math_op.rs  mod.rs  primary.rs
src/parsing/item/: extern_fn.rs  function.rs  import.rs  mod.rs
tests/: compile.rs
