[workspace]
members = ["compiler", "kawaii"]
resolver = "3"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[workspace.dependencies]
anyhow = "1"
ariadne = "0.6"
chumsky = "0.13"
clap = { version = "4", features = ["derive"] }
inkwell = { version = "0.9", features = ["llvm22-1"] }
logos = "0.16"
tap = "1"
walkdir = "2"
xshell = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "1"

beatrice-compiler.path = "./compiler"
