[package]
name = "beatrice-compiler"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "beatricec"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ariadne.workspace = true
chumsky.workspace = true
clap.workspace = true
inkwell.workspace = true
logos.workspace = true
tap.workspace = true
