[package]
name = "beatrice-compiler"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
keywords = ["beatrice", "compiler", "language"]
categories = ["compilers", "command-line-utilities"]
description = "Compiler for the Beatrice programming language"
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "beatricec"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ariadne.workspace = true
chumsky.workspace = true
clap.workspace = true
inkwell.workspace = true
logos.workspace = true
tap.workspace = true

[dev-dependencies]
tempfile = "3"
