[package]
name = "kawaii"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
keywords = ["beatrice", "build-system", "package-manager", "cli"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[lints]
workspace = true

[dependencies]
beatrice-compiler.workspace = true
clap.workspace = true
walkdir.workspace = true
tap.workspace = true
xshell.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
